--- a/GraphicsOffline02.vcxproj.filters
+++ b/GraphicsOffline02.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="gate.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="texture.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
