--- a/GraphicsOffline02.vcxproj
+++ b/GraphicsOffline02.vcxproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gate.h" />
+    <ClInclude Include="taj.h" />
     <ClInclude Include="texture.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
