--- a/GraphicsOffline02.vcxproj.filters
+++ b/GraphicsOffline02.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="texture.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="taj.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
